--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            python -m venv pseudoRNG-venv
+            python3 -m venv pseudoRNG-venv
             pseudoRNG-venv\Scripts\activate.bat
             pip install -r requirements.txt
       # Step 3: run linter and tests
