--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           name: install dependencies
           command: |
             python3 -m venv pseudoRNG-venv
-            pseudoRNG-venv\Scripts\activate.bat
+            . pseudoRNG-venv/bin/activate
             pip install -r requirements.txt
       # Step 3: run linter and tests
       - run:
