--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,6 @@ jobs:
       - run:
           name: run tests
           command: |
-            pseudoRNG-env\Scripts\activate.bat
+            pseudoRNG-venv/bin/activate
             flake8 --exclude=pseudoRNG-venv* --statistics
             pytest -v --cov=numpyPseudoRNG
